<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.register.RegisterFragment"
    android:background="#EDEDED"
    android:layoutDirection="rtl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_marginStart="@dimen/_10mdp"
                app:layout_constraintTop_toTopOf="@id/btnBack"
                app:layout_constraintBottom_toBottomOf="@id/btnBack"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:textColor="@color/black"
                android:textSize="@dimen/_13font_mdp"/>

            <ImageButton
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/baseline_arrow_forward_24"
                app:tint="@color/dark_gray" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/static_text_1"
            app:layout_constraintTop_toBottomOf="@id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45mdp"
            android:text="@string/enter_info"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10mdp"
            android:paddingEnd="@dimen/_10mdp"
            android:textSize="@dimen/_13font_mdp"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/user_info_layout1"
            android:orientation="vertical"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/static_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_20mdp"
            android:paddingBottom="@dimen/_20mdp"
            android:paddingStart="@dimen/_10mdp"
            android:paddingEnd="@dimen/_10mdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:endIconDrawable="@drawable/baseline_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/gray"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:cursorColor="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:paddingStart="@dimen/_90mdp"
                        android:paddingEnd="@dimen/_90mdp"
                        android:id="@+id/first_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13font_mdp"
                        android:lines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13font_mdp"
                    app:layout_constraintTop_toTopOf="@id/first_name_TextInputLayout"
                    app:layout_constraintBottom_toBottomOf="@id/first_name_TextInputLayout"
                    app:layout_constraintStart_toStartOf="@id/first_name_TextInputLayout"
                    android:layout_marginStart="@dimen/_10mdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13mdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:endIconDrawable="@drawable/baseline_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/gray"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:cursorColor="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:paddingStart="@dimen/_90mdp"
                        android:paddingEnd="@dimen/_90mdp"
                        android:id="@+id/last_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13font_mdp"
                        android:lines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13font_mdp"
                    app:layout_constraintTop_toTopOf="@id/last_name_TextInputLayout"
                    app:layout_constraintBottom_toBottomOf="@id/last_name_TextInputLayout"
                    app:layout_constraintStart_toStartOf="@id/last_name_TextInputLayout"
                    android:layout_marginStart="@dimen/_10mdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13mdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/coordinate_mobile_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:endIconDrawable="@drawable/baseline_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/gray"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:cursorColor="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:paddingStart="@dimen/_90mdp"
                        android:inputType="phone"
                        android:id="@+id/coordinate_mobile_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/_90mdp"
                        android:textSize="@dimen/_13font_mdp"
                        android:lines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinate_mobile"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13font_mdp"
                    app:layout_constraintTop_toTopOf="@id/coordinate_mobile_TextInputLayout"
                    app:layout_constraintBottom_toBottomOf="@id/coordinate_mobile_TextInputLayout"
                    app:layout_constraintStart_toStartOf="@id/coordinate_mobile_TextInputLayout"
                    android:layout_marginStart="@dimen/_10mdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13mdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/coordinate_phone_number_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:endIconDrawable="@drawable/baseline_circle_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/gray"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:cursorColor="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:paddingStart="@dimen/_90mdp"
                        android:inputType="phone"
                        android:paddingEnd="@dimen/_90mdp"
                        android:id="@+id/coordinate_phone_number_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13font_mdp"
                        android:lines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinate_phone_number"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13font_mdp"
                    app:layout_constraintTop_toTopOf="@id/coordinate_phone_number_TextInputLayout"
                    app:layout_constraintBottom_toBottomOf="@id/coordinate_phone_number_TextInputLayout"
                    app:layout_constraintStart_toStartOf="@id/coordinate_phone_number_TextInputLayout"
                    android:layout_marginStart="@dimen/_10mdp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/user_info_layout2"
            android:paddingTop="@dimen/_20mdp"
            android:paddingBottom="@dimen/_20mdp"
            android:paddingStart="@dimen/_10mdp"
            android:paddingEnd="@dimen/_10mdp"
            app:layout_constraintTop_toBottomOf="@id/user_info_layout1"
            android:layout_marginTop="@dimen/_10mdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/blue"
                android:textSize="@dimen/_13font_mdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/baseline_circle_24"
                app:endIconMode="custom"
                app:endIconTint="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:cursorColor="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:paddingStart="@dimen/_10mdp"
                    android:paddingEnd="@dimen/_20mdp"
                    android:id="@+id/address_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13font_mdp"
                    android:focusable="false"
                    android:clickable="true"
                    android:lines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/_10mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/gender_btn"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:singleSelection="true"
                    app:selectionRequired="true" >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/button_background_selector"
                        app:strokeColor="@color/blue"
                        app:strokeWidth="2dp"
                        android:text="@string/male"
                        android:textColor="@color/button_text_selector"
                        android:textSize="16sp"
                        android:checkable="true"
                        app:checkedIconTint="@android:color/transparent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/button_background_selector"
                        app:strokeColor="@color/blue"
                        app:strokeWidth="2dp"
                        android:text="@string/female"
                        android:textColor="@color/button_text_selector"
                        android:textSize="16sp"
                        android:checkable="true"
                        app:checkedIconTint="@android:color/transparent" />

                </com.google.android.material.button.MaterialButtonToggleGroup>


                <TextView
                    android:id="@+id/gender_static_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/gender_btn"
                    app:layout_constraintBottom_toBottomOf="@id/gender_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13font_mdp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/_20mdp"
            android:id="@+id/next_stage_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_stage"
            android:layout_marginHorizontal="@dimen/_10mdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/confirm_button_shape"
            android:textColor="@color/white"
            android:textSize="@dimen/_13font_mdp"
            app:layout_constraintTop_toBottomOf="@id/user_info_layout2"/>

        <ProgressBar
            android:layout_marginTop="@dimen/_20mdp"
            app:layout_constraintTop_toBottomOf="@id/user_info_layout2"
            android:layout_marginHorizontal="@dimen/_10mdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/loading_progressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
